# mobius

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  rust-toolchain.toml
dev/: Mobius-implement.md  Mobius-subagent.md  mobius-model.md  v1-implementation-status.md  v1-typed-mapping.md
docs/: agent-control-evaluation.md  official-docs-basis.md  release-checklist.md  session-audit-contract.md
plugins/mobius/runtime/: Cargo.toml
plugins/mobius/runtime/src/: error.rs  main.rs
plugins/mobius/runtime/src/application/: admission.rs  commands.rs  mod.rs  service.rs
plugins/mobius/runtime/src/domain/: codec.rs  guards.rs  mod.rs  reducer.rs  state_machine_tests.rs  types.rs
plugins/mobius/runtime/src/infrastructure/: artifacts.rs  mod.rs  sqlite.rs
plugins/mobius/runtime/src/presentation/: mod.rs  report.rs
plugins/mobius/runtime/src/transport/: cli.rs  hooks.rs  mcp.rs  mod.rs
plugins/mobius/runtime/tests/: composition_skill_contract.rs  evidence_bundle_contract.rs  formal_wait_sql_contract.rs  judge_consumption_contract.rs  mcp_protocol.rs  phase1_contract.rs  proof_impact_contract.rs  report_cli_contract.rs  review_closure_contract.rs  session_audit_contract.rs  subagent_skill_contract.rs
plugins/mobius/runtime/tests/fixtures/: agent-control-faults-v1.json  proof-impact-v1.json  session-audit-d0-v1.json
plugins/mobius/runtime/tests/support/: evidence_bundle.rs
scripts/: verify.sh
tests/: mobius_regression_tests.py  release_bundle_contract.sh  test_release_bundle.py
(+37 files in other folders)
