[package]
name = "mobius"
version = "1.3.0"
edition = "2024"
rust-version = "1.85.0"
description = "Local Mobius model core and its single executable runtime"
license = "Apache-2.0"
repository = "https://github.com/boman-ng/mobius"
publish = false

[[bin]]
name = "mobius"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.11.0"
url = "2.5.7"
uuid = { version = "1.23.4", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
